# external-issue-checker

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci-tests.yml  publish-tags.yml
src/external_issue_checker/: __init__.py  cli.py  git_utils.py  github_api.py  parser.py  scan.py
src/external_issue_checker/platform/: github_api.py  gitlab_api.py
tests/: test_git_utils.py  test_github_api.py  test_parser.py
